--- a/environment.yml
+++ b/environment.yml
@@ -65,6 +65,7 @@ dependencies:
   - gmp=6.1.2=h6c8ec71_1
   - gmpy2=2.0.8=py36h10f8cd9_2
   - graphite2=1.3.13=h23475e2_0
+  - graphviz=2.40.1=h21bd128_2
   - greenlet=0.4.15=py36h7b6447c_0
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb453b48_1
@@ -287,6 +288,7 @@ dependencies:
     - gast==0.2.2
     - google-pasta==0.1.7
     - grpcio==1.24.0
+    - imbalanced-learn==0.5.0
     - keras==2.3.0
     - keras-applications==1.0.8
     - keras-preprocessing==1.1.0
@@ -295,6 +297,7 @@ dependencies:
     - openfile==0.0.7
     - opt-einsum==3.1.0
     - protobuf==3.9.2
+    - pydot==1.4.1
     - tensorboard==2.0.0
     - tensorflow==2.0.0
     - tensorflow-estimator==2.0.0
